syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "TemperatureUnitProto";

enum TemperatureUnitProto {
  CELSIUS = 0;
  FAHRENHEIT = 1;
}